# aubio

./: .gitignore  CMakeLists.txt  cross-compile.sh  waf  wscript
win-build-out/Debug/64bit/lib/pkgconfig/: aubio.pc
win-build-output/32bit/lib/: libaubio-5.def
win-build-output/32bit/lib/pkgconfig/: aubio.pc
win-build-output/64bit/lib/pkgconfig/: aubio.pc
